--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,3 +43,13 @@ spring:
           starttls:
             enable: true
           auth: true
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: 1092632552052-2h3rg3p2sf9d83drtpb4s7fss4c1op5s.apps.googleusercontent.com
+            client-secret: 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
+            scope:
+              - email
+              - profile
