--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -53,3 +53,9 @@ spring:
             scope:
               - email
               - profile
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 10MB
+      max-request-size: 20MB
+      location: C:/bloomingshop   # 자기 PC에 첨부파일 저장할때
