250304 서버 외부 리소스 디렉터리 경로 업데이트 및 yml 파일 local 및 prod 분리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,8 @@ server:
 spring:
   application:
     name: BloomingShop
+  profiles:
+    active: local
   mustache:
     enabled: true
     charset: UTF-8
@@ -58,4 +60,3 @@ spring:
       enabled: true
       max-file-size: 10MB
       max-request-size: 20MB
-      location: C:/bloomingshop   # 자기 PC에 첨부파일 저장할때
